--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         var e = window.location.href;
         
        
-        Redirect("https://goldestralia.com/?url="+e);
+        Redirect("https://goldestralia.com/west/?url="+e);
     }
 </script>
 </head>
